# simple_web

./: .gitignore  Cargo.toml  Dockerfile  README-github.md  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  run.sh  test.sh
.forgejo/workflows/: README.md  docker-forgejo.yml  mirror-to-github.yml
.github/workflows/: docker-publish.yml
backend_simple_web/: Cargo.toml  README.md
backend_simple_web/src/: api.rs  auth.rs  main.rs  scheduler.rs
backend_simple_web/src/api/: error.rs  files.rs  git.rs  mod.rs  move_ops.rs  path.rs  themes.rs  upload.rs
frontend_simple_web/: Cargo.toml  Trunk.toml  index.html  styles.css
frontend_simple_web/src/: config_file.rs  main.rs  router.rs
frontend_simple_web/src/api/: auth.rs  client.rs  file.rs  git.rs  mod.rs  themes.rs  utils.rs
frontend_simple_web/src/components/: auth_guard.rs  code_editor.rs  code_editor_textarea.rs  file_browser.rs  git_manager.rs  mod.rs  theme_editor.rs  theme_selector.rs
frontend_simple_web/src/highlighting/: config.rs  highlighter.rs  mod.rs  themes.rs
frontend_simple_web/src/hooks/: mod.rs  use_async_action.rs  use_git_settings.rs  use_input.rs
frontend_simple_web/src/pages/: about.rs  login.rs  mod.rs  settings.rs  web_editor.rs
tests/: README.md  auth.hurl  files.hurl  git.hurl  run_tests.sh  themes.hurl
