[package]
name = "backend_simple_web"
version = "0.1.1"
edition = "2024"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.15"
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2.1.3"
git2 = "0.20.2"
tempfile = "3"
prisma_auth = { version = "0.2.1", features = ["rocket_backend"] }
