[package]
name = "frontend_simple_web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo = { version = "0.11", features = ["net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3.77", features = [
  "HtmlTextAreaElement",
  "DragEvent",
  "DataTransfer",
  "Selection",
  "Range",
  "Node",
  "Text",
  "NodeFilter",
  "TreeWalker",
  "Document",
  "Window"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
urlencoding = "2.1.3"
regex = "1.11.1"
html-escape = "0.2.13"
lazy_static = "1.5.0"
once_cell = "1.21.3"
