[package]
name = "frontend_simple_web"
version = "0.1.1"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo = { version = "0.11", features = ["net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3.77", features = [
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "DragEvent",
  "DataTransfer",
  "Selection",
  "Range",
  "Node",
  "Text",
  "NodeFilter",
  "TreeWalker",
  "Document",
  "Window"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
urlencoding = "2.1.3"
regex = "1.11.1"
html-escape = "0.2.13"
lazy_static = "1.5.0"
once_cell = "1.21.3"
prisma_auth = { git = "https://git.prisma.moe/aichan/prisma_auth", features = ["yew_frontend"] }
